mobile-app layout

--- a/styles/partials/_base.scss
+++ b/styles/partials/_base.scss
@@ -11,6 +11,7 @@ $radio-outline: hsl(289, 100%, 72%);
 // primary variables
 $username: hsl(276, 100%, 81%);
 $left-chat: hsl(276, 55%, 52%);
+$left-chat-bg: hsla(276, 55%, 52%, 0.075);
 $right-chat: hsl(271, 15%, 43%);
 $placeholder: hsl(206, 6%, 79%);
 $heading: hsl(271, 36%, 24%);
